[gd_scene load_steps=7 format=3 uid="uid://c6rqd0exajwhm"]

[ext_resource type="Script" path="res://scripts/ghost_clicker.gd" id="1_hrfij"]
[ext_resource type="PackedScene" uid="uid://cwurhf25p3rhr" path="res://prefabs/rigid_ghost.res" id="2_iogbg"]
[ext_resource type="Texture2D" uid="uid://bk07getkatbso" path="res://art/ghost_16x16.png" id="3_nl0ld"]
[ext_resource type="LabelSettings" uid="uid://crkhv5nqxc3kd" path="res://text/my_label_settings.tres" id="4_0vlgb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evrd7"]
size = Vector2(16, 16)

[sub_resource type="Curve2D" id="Curve2D_b73lm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 199, 137, 0, 0, 0, 0, 494, 74, 0, 0, 0, 0, 821, 152)
}
point_count = 3

[node name="cookie_clicker" type="Node2D"]
script = ExtResource("1_hrfij")
rigid_ghost_prefab = ExtResource("2_iogbg")

[node name="cookie" type="Area2D" parent="."]
position = Vector2(500, 300)
scale = Vector2(10, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="cookie"]
shape = SubResource("RectangleShape2D_evrd7")

[node name="cookie_sprite" type="Sprite2D" parent="cookie"]
texture_filter = 1
texture = ExtResource("3_nl0ld")

[node name="canvas" type="CanvasLayer" parent="."]

[node name="click_labels" type="HBoxContainer" parent="canvas"]
offset_left = 68.0
offset_top = 51.0
offset_right = 224.0
offset_bottom = 91.0

[node name="label_num" type="Label" parent="canvas/click_labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 1
text = "Number of cookies:"
label_settings = ExtResource("4_0vlgb")

[node name="label_count" type="Label" parent="canvas/click_labels"]
layout_mode = 2
label_settings = ExtResource("4_0vlgb")

[node name="cookie_spawner" type="Path2D" parent="."]
curve = SubResource("Curve2D_b73lm")

[connection signal="input_event" from="cookie" to="." method="_on_cookie_input_event"]
